差分の修正
