# swagger.yml
@@ -12,37 +12,50 @@ servers:
 
 paths:
   /api/products:
+    get:
+      tags:
+        - products
+      summary: "商品の商品タイトル検索"
+      description: "商品タイトルによる部分一致検索をする"
+      parameters:
+        - in: query
+          name: title
+          schema:
+            type: string
+          description: 商品タイトル
+      responses:
+        '200':
+          description: "商品検索"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/product'
+        '500':
+          description: "INTERNAL_SERVER_ERROR"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/handleAllException'
+
     post:
       tags:
         - products
       summary: "商品の作成"
       description: "商品情報をPOSTメソッドで送信"
-      parameters: []
       requestBody:
+        description: 登録する商品内容
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/product'
-            example:
-              id: 1
-              title: 青ペン
-              description: 青いペンです
-              price: 100
+              $ref: '#/components/schemas/productForm'
       responses:
         '201':
           description: "CREATED:画像のみJSONではなくmultipart/form-data形式でアップロードを受けとる"
           content:
             application/json:
               schema:
-                type: array
-                products:
-                  $ref: '#/components/schemas/product'
-                example:
-                  id: 3
-                  imagePath: image/22332233.png
-                  title: 青ペン
-                  description: 青いペンです
-                  price: 100
+                $ref: '#/components/schemas/product'
+
         '400':
           description: "バリデーションエラー"
           content:
@@ -75,12 +88,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/product'
-              example:
-                id: 1
-                imagePath: image/12345.png
-                title: 赤ペン
-                description: 赤色のペンです
-                price: 100
+
         '404':
           description: "存在しない商品IDを入力した場合"
           content:
@@ -123,12 +131,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/product'
-              example:
-                id: 1
-                imagePath: image/12345.png
-                title: 黄ペン
-                description: 黄色のペンです
-                price: 100
+
         '400':
           description: "バリデーションエラー"
           content:
@@ -187,48 +190,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/handleAllException'
 
-  /api/products/{id}/image/{imagePath}:
-    get:
-      tags:
-        - products
-      summary: "商品の画像取得"
-      description: "該当するidの商品に商品画像が登録されている場合に表示する"
-      parameters:
-        - name: id
-            in: path
-            description: 取得したい画像の商品ID
-            required: true
-            schema:
-              type: integer
-              format: int64
-        - name: imagePath
-            in: path
-            description: 取得したい商品画像の画像パス
-            required: true
-            schema:
-              type: string
-      responses:
-        '200':
-          description: "該当するidの商品画像を表示する"
-        '404':
-          description: "存在しない商品IDを入力した場合/商品は存在するけど商品画像が登録されていない場合"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/handleproductNotFoundException'
-        '405':
-          description: "パス変数に異なる型を入力した場合等"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/handleTypeMismatch'
-        '500':
-          description: "INTERNAL_SERVER_ERROR"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/handleAllException'
-
+  /api/products/{id}/images:
     patch:
       tags:
         - products
@@ -255,12 +217,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/product"
-              example:
-                id: 2
-                imagePath: image/55555555.png
-                title: 青ペン
-                description: 青色のペンです
-                price: 666
+
         '404':
           description: "存在しない商品IDを入力した場合/商品は存在するけど商品画像が登録されていない場合"
           content:
@@ -287,32 +244,30 @@ paths:
               schema:
                 oneOf:
                   - $ref: '#/components/schemas/handleAllException'
-    delete:
+
+  /api/products/{id}/images/{imagePath}:
+    get:
       tags:
         - products
-      summary: "商品画像の削除"
-      description: "id値を持つ商品の商品画像を削除する。"
+      summary: "商品の画像取得"
+      description: "該当するidの商品に商品画像が登録されている場合に表示する"
       parameters:
         - name: id
           in: path
+          description: 取得したい画像の商品ID
           required: true
           schema:
             type: integer
             format: int64
-          description: 商品ID
+        - name: imagePath
+          in: path
+          description: 取得したい商品画像の画像パス
+          required: true
+          schema:
+            type: string
       responses:
         '200':
-          description: "該当するidの商品に商品画像を削除する。"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/product"
-              example:
-                id: 1
-                imagePath: null
-                title: 黄ペン
-                description: 黄色のペンです
-                price: 100
+          description: "該当するidの商品画像を表示する"
         '404':
           description: "存在しない商品IDを入力した場合/商品は存在するけど商品画像が登録されていない場合"
           content:
@@ -326,44 +281,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/handleTypeMismatch'
         '500':
-          description: "商品画像の削除に失敗/INTERNAL_SERVER_ERROR"
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/handleproductImageNotDeletedException'
-                  - $ref: '#/components/schemas/handleAllException'
-  /api/products/search:
-    get:
-      tags:
-        - products
-      summary: "商品の商品タイトル検索"
-      description: "商品タイトルによる部分一致検索をする"
-      parameters:
-        - in: query
-          name: keyword
-          schema:
-            type: string
-          description: 商品タイトル
-      responses:
-        '200':
-          description: "商品タイトルの部分一致検索にヒットした商品を表示する"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/product'
-              example:
-                id: 1
-                imagePath: image/123456789.png
-                title: 赤ペン
-                description: 赤色のペンです
-                price: 100
-        '500':
           description: "INTERNAL_SERVER_ERROR"
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/handleAllException'
+
 
 components:
   schemas:
@@ -394,6 +317,24 @@ components:
         updateTime:
           type: string
           format: date-time
+    productForm:
+      type: object
+      properties:
+        title:
+          type: string
+          maxLength: 100
+        description:
+          type: string
+          maxLength: 500
+        price:
+          type: integer
+          format: int64
+          minimum: 1
+          maximum: 1000000
+      required:
+        - title
+        - description
+        - price
     Image:
       type: object
       properties:
